# CS469-Project

./: .gitignore  CMakeLists.txt  README.md  client.c  create_db.py  globals.c  globals.h  items.csv  loginUI.glade  mainUI.glade  sqlite-demo.c  user_mgr.c
client/: client.c  login_window.c  login_window.h  main_window.c  main_window.h  network.c  network.h
datastore/: datastore.c  network.c  network.h
inventoryserver/: network.c  network.h  queue.c  queue.h  server.c  server.conf
